updating polish translation http://community.igniterealtime.org/message/210256#209500 from Martini26
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12110 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -217,17 +217,14 @@
 ##     Removed key: 'status.available'
 ##     Added key: 'message.nickname.not.acceptable'
 ##     Added key: 'button.login'
+##     Added key: 'administrator'
+##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
 ##
-## 2.6.0 RC1
-##
-##     Polish translation made by: Marcin Marek & Tomasz Dziedzic
-##
-##
-
 
 accept = Akceptuj
 active = Aktywny
 add = Dodaj
+administrator = Administrator
 answer = Odpowiedz
 apply = Zatwierd\u017a
 available = Dost\u0119pny
@@ -370,7 +367,7 @@ group.empty = W tej grupie nie ma aktywnych kontakt\u00f3w
 group.general.information = Informacje og\u00f3lne 
 group.login.information = Informacje o logowaniu
 group.notification.options = Opcje powiadomie\u0144
-group.offline = Grupa u\u017cytkownik\u00f3w nieaktywnych
+group.offline = Grupa u\u017cytkownik\u00f3w niedost\u0119pnych
 group.search.form = Wyszukaj
 group.search.results = Wyniki wyszukiwania
 group.chat.name.notification = Widz\u0119 Twoj\u0105 nazw\u0119...
@@ -431,7 +428,7 @@ label.nickname = Pseudonim
 label.number = Numer
 label.ok = OK
 label.old.ssl = U\u017cywaj starej metody SLL
-label.os = System operacyjny
+label.os = Wersja systemu
 label.pager = Pager
 label.password = Has\u0142o
 label.phone = Telefon
@@ -451,7 +448,7 @@ label.search.service = Szukaj us\u0142ug
 label.server = Serwer
 label.server.address = Adres serwera
 label.show = Poka\u017c:
-label.software = Oprogramowanie
+label.software = Komunikator
 label.state.and.province = Wojew\u00f3dztwo
 label.street.address = Ulica
 label.time = Czas: {0}
@@ -494,6 +491,7 @@ menuitem.add.groupchat.myname = Pod\u015bwietlaj moj\u0105 nazw\u0119 u\u017cytk
 menuitem.add.groupchat.mytext = Pod\u015bwietlaj moje wypowiedzi
 menuitem.add.groupchat.popname = Pokazuj wyskakuj\u0105ce okienko kiedy kto\u015b napisze moj\u0105 nazw\u0119 u\u017cytkownika
 menuitem.add.groupchat.showjoinleavemessage = Wy\u015bwietlaj wiadomo\u015bci o do\u0142\u0105czeniu i opuszczeniu u\u017cytkownik\u00f3w
+menuitem.add.groupchat.showrolesinsteadofstatus = Pokazuj ikony r\u00f3l zamiast ikon statusu
 menuitem.always.on.top = Zawsze na wierzchu
 menuitem.alert.when.online = Powiadom o dost\u0119pno\u015bci u\u017cytkownika
 menuitem.ban = Zablokuj
@@ -527,7 +525,7 @@ menuitem.join.room = Do\u0142\u0105cz do wybranego pokoju
 menuitem.kick.user = Wyrzu\u0107 u\u017cytkownika
 menuitem.languages = J\u0119zyki
 menuitem.logout.no.status = Wyloguj
-menuitem.logout.with.status = Wyloguj z powodu (ze statusem)
+menuitem.logout.with.status = Wyloguj z opisem (...)
 menuitem.lookup.profile = Przeszukaj profil…
 menuitem.move.to = Przenie\u015b do
 menuitem.online.help = Forum Sparka (online)
@@ -903,6 +901,7 @@ title.group.chat.settings = Ustawienia rozmowy grupowej
 title.gtalk.registration = Ustawienia konta Gtalk
 title.history.for = Historia rozm\u00f3w dla {0}
 title.icq.registration = Ustawienia konta ICQ
+title.aim.registration = Ustawienia konta AIM 
 title.irc.registration = Ustawienia konta IRC
 title.sametime.registration = Ustawienia konta Sametime
 title.facebook.registration = Ustawienia konta Facebook
@@ -980,20 +979,5 @@ tooltip.view.readme = Zobacz plik readme
 
 tree.conference.services = Us\u0142ugi konferencyjne
 tree.users.in.room = U\u017cytkownicy w pokoju
-
-
-##########################################
-#                                        #
-#                                        #
-#       Missing Translation:             #
-#                                        #
-#                                        #
-##########################################
-
-
-administrator = Administrator
-menuitem.add.groupchat.showrolesinsteadofstatus = Show chatroleicons instead of statusicons
-title.aim.registration = AIM account credentials
-
 
 #!#
