SPARK-892 re-join ConferenceRooms when reconnection Successful
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12116 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -626,7 +626,7 @@ message.delete.confirmation = Are you sure you want to delete {0}?
 message.disable.transport = Remove login information from {0}?
 message.disconnected.conflict.error = Your connection was closed due to the same user logging in from another location
 message.disconnected.error = Your connection was closed due to an error
-message.disconnected.group.chat.error = Your connection was closed due to an error, you will need to re-join this room after reconnecting
+message.disconnected.group.chat.error = Your connection was closed due to an error, Spark will automatically re-join the channel when reconnection was sucessfull
 message.disconnected.shutdown = Your connection was closed because the server was shut down
 message.downloading = Downloading {0}
 message.downloading.spark.plug = Downloading Spark-Plug
