--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -338,7 +338,7 @@ message.supply.valid.port = Bitte einen korrekten Port eingeben.
 message.supply.resource = Bitte die korrekte Ressource eingeben.
 message.current.status = Andere Teilnehmer können meinen Status einsehen.
 message.disconnected.error = Die Verbindung wurde aufgrund eines Fehlers abgebrochen.
-message.disconnected.group.chat.error = Die Verbindung wurde wegen eines Fehlers unterbrochen. Nach dem wiederherstellen der Verbindung bitte den Raum erneut betreten.
+message.disconnected.group.chat.error = Die Verbindung wurde wegen eines Fehlers unterbrochen. Spark wird diesen Chatraum automatisch betreten, wenn die Verbindung wieder hergestellt wurde. 
 message.disconnected.conflict.error = Die Verbindung wurde abgebrochen, da mit ihren Zugangsdaten ein weiteres Login registriert wurde.
 message.locked.workstation = Computer gesperrt
 message.away.idle = Abwesend
