Added super awesome reconnection display methods http://community.igniterealtime.org/message/210296#210296 related to SPARK-1224
typo in german-locale
typo in polish flashing locale

new in language strings:
checkbox.reconnet.info = Specify reconnection display:
checkbox.reconnect.panel.big = Display as Panel
checkbox.reconnect.panel.small = Display in contact group
checkbox.reconnect.panel.icon = Display as icon

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12119 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -323,6 +323,10 @@ checkbox.disable.prev.chat.history = Disable &showing previous conversation in c
 checkbox.enable.emoticons = E&nable emoticons
 checkbox.idle.enabled = &Idle enabled
 checkbox.launch.on.startup = &Launch on startup
+checkbox.reconnet.info = Specify reconnection display:
+checkbox.reconnect.panel.big = Display as Panel
+checkbox.reconnect.panel.small = Display in contact group
+checkbox.reconnect.panel.icon = Display as icon
 checkbox.notify.user.comes.online = Notify when a user &comes online
 checkbox.notify.user.goes.offline = &Notify when a user goes offline
 checkbox.notify.typing.systemtray = &Show typing notification in the system tray
