--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -213,6 +213,10 @@ checkbox.play.sound.on.outgoing.message = &Klang abspielen wenn Nachricht ge&sen
 checkbox.play.sound.on.invitation = Klang abspielen bei eintreffen einer &Konferenz &Einladung
 checkbox.idle.enabled = &Automatisches 'Away' bei Inaktivität aktivieren
 checkbox.launch.on.startup = &Spark bei Systemstart ausführen
+checkbox.reconnet.info = Art des Wiederverbindens:
+checkbox.reconnect.panel.big = Zeige ein Panel
+checkbox.reconnect.panel.small = Zeige eine Gruppe
+checkbox.reconnect.panel.icon = Zeige ein Icon
 checkbox.start.in.tray = Spark automatisch in der &Taskleiste starten
 checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
 checkbox.tabs.on.top = &Chat tabs oben anzeigen (benötigt Neustart von Spark)
@@ -721,8 +725,8 @@ menuitem.show.offline.group = Offline User gruppieren
 menuitem.move.to = Verschieben nach
 menuitem.copy.to = Kopieren nach
 menuitem.user.guide = Benutzerhandbuch
-menuitem.add.groupchat.myname  = Meinen &Namen hervorheben, wenn ihn jemand schreibt
-menuitem.add.groupchat.mytext  = Meinen &Text hervorheben, wenn ich etwas schreibe
+menuitem.add.groupchat.myname = Meinen &Namen hervorheben, wenn ihn jemand schreibt
+menuitem.add.groupchat.mytext = Meinen &Text hervorheben, wenn ich etwas schreibe
 menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
 menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den Raum betritt oder verlässt 
 menuitem.add.groupchat.showrolesinsteadofstatus = Zeige Chatrecht-Icons anstelle von Statusicons
@@ -835,7 +839,7 @@ message.no.updates = Es gibt keine Aktualisierungen
 message.normal = Normale Nachricht
 message.reconnect.attempting = Versuche...
 message.reconnect.failed = Wiederverbinden gescheitert
-message.reconnect.wait = Wiederverbingen in {0} Sekunden
+message.reconnect.wait = Wiederverbinden in {0} Sekunden
 message.restart.spark.changes = Das Plugin wird beim nächsten Start von Spark entfernt
 message.restart.required = Du musst Spark neustarten damit die Änderungen wirksam werden, möchtest du jetzt Neustarten?
 message.send.to.these.people = Sende an diese Leute
