--- a/src/plugins/flashing/resources/i18n/flashing_i18n_pl.properties
+++ b/src/plugins/flashing/resources/i18n/flashing_i18n_pl.properties
@@ -1,6 +1,6 @@
 title.flashing = Migotanie paska zada\u0144
 
-flashing.enable = W³\u0105cz migotanie paska zada\u0144
+flashing.enable = W\u0142\u0105cz migotanie paska zada\u0144
 flashing.type = Rodzaj migotania
 flashing.type.continuous = Ci\u0105g\u0142y
 flashing.type.temporary = Tymczasowy
