--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -557,7 +557,7 @@ title.invite.to.conference = Zu einer Konferenz einladen
 title.room.information = Raum Informationen
 title.change.nickname = Angezeigten Name ändern
 title.group.chat.settings = Konferenz Einstellungen
-title.group.chat = Konfernz
+title.group.chat = Konferenz
 title.create.or.bookmark.room = Raum als Lesezeichen setzen oder dem Raum beitreten
 title.browse.room.service = Liste der Konferenzen - {0}
 title.name = Name
