Never be able to Close SubscriptionDialog, either deny or accept typo in german
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12128 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -671,7 +671,7 @@ menuitem.delete = Löschen
 menuitem.edit = Ändern
 menuitem.remove.from.roster = Von Kontaktliste entfernen
 menuitem.view.profile = Profil anzeigen
-menuitem.subscribe.to = Abonnieren bei 
+menuitem.subscribe.to = Kontaktanfrage senden
 menuitem.send.a.message = Nachricht senden...
 menuitem.show.empty.groups = Leere Gruppen anzeigen
 menuitem.send.a.file = Datei senden
