...equals("offline group") only works on english locale, fixed
correction in german local

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12132 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -664,7 +664,7 @@ menuitem.save = Speichern
 menuitem.add = Hinzufügen
 menuitem.add.contact = Kontakt hinzufügen
 menuitem.add.contact.group = Kontaktgruppe hinzufügen
-menuitem.remove.from.group = Kontaktgruppe löschen
+menuitem.remove.from.group = Aus dieser Gruppe entfernen
 menuitem.start.a.chat = Chat starten
 menuitem.rename = Umbenennen
 menuitem.delete = Löschen
