SPARK-1020 spark shows wrong or no popup on receiving group chat invite, now works
typo in german locale

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12134 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -525,7 +525,7 @@ message.room.creation.error = Der Raum kann nicht erstellt werden.
 message.unable.to.retrieve.last.activity = Keine letzte Aktivität für {0} vorhanden
 message.buzz.alert.notification = Sich beim Benutzer bemerkbar machen.
 message.buzz.sent = 'Buzzer' Benachrichtigung an Benutzer gesendet.
-message.invite.to.groupchat = Sie wurden von {0} zu einen Gruppen-Chat eingeladen
+message.invite.to.groupchat = Sie wurden von {0} zu einem Gruppen-Chat eingeladen
 title.advanced.connection.preferences = Erweiterte Verbindungseinstellungen
 title.passwords.no.match = Passwörter stimmen nicht überein. Bitte Eingabe wiederholen.
 title.create.problem = Problem beim Anlegen eines Accounts
