SPARK-1256 , removed & from check for updates menuentry and added KeyListener
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12149 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -651,7 +651,7 @@ menuitem.logout.no.status = Ausloggen
 menuitem.logout.with.status = Ausloggen mit Nachricht
 menuitem.show.traffic = Verbindungsdaten
 menuitem.check.for.updates = Ist eine neuere &Version verfügbar?
-menuitem.help = Hilfe
+menuitem.help = &Hilfe
 menuitem.preferences = Einstellungen
 menuitem.about = Über
 menuitem.online.help = Online-Hilfe
