Selectable Look And feel in Preferences updated Substance.jar to newest release (5.3_reykjavik)
new localestrings: 
lookandfeel.select = Select Look & Feel
lookandfeel.change.now = Change now
lookandfeel.tooltip.restart.no = No restart is needed
lookandfeel.tooltip.restart.yes = To toggle a System Look&Feel press Save and restart Spark.

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12151 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -981,4 +981,10 @@ tooltip.view.readme = View readme
 
 tree.conference.services = Conference services
 tree.users.in.room = Users in room
+
+lookandfeel.select = Select Look & Feel
+lookandfeel.change.now = Change now
+lookandfeel.tooltip.restart.no = No restart is needed
+lookandfeel.tooltip.restart.yes = To toggle a System Look&Feel press Save and restart Spark.
+
 #!#
