--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -872,4 +872,9 @@ tooltip.appearance = Ändere das Aussehen der Unterhaltungen
 tooltip.file.transfer = Präferenzen für Dateitransfers
 tooltip.send.email = Sende eine e-Mail
 tooltip.start.chat = Starte eine Konversation
+
+lookandfeel.select = Wähle ein Thema
+lookandfeel.change.now = Jetzt ändern
+lookandfeel.tooltip.restart.no = Es wird kein Neustart benötigt
+lookandfeel.tooltip.restart.yes = Um ein System Look&Feel auszuwählen, bitte Speichern und Spark neustarten.
 #!#
