update polish translation http://community.igniterealtime.org/message/210518#210518
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12153 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -210,7 +210,7 @@
 ## 	   Added key: 'label.video.device'
 ## 	   Added key: 'button.re.detect'
 ##
-## 2.6.0 beta 1
+## 2.6.0 RC2
 ##
 ##     Added key: 'menuitem.block.contact'
 ##     Added key: 'menuitem.unblock.contact'
@@ -219,7 +219,17 @@
 ##     Added key: 'button.login'
 ##     Added key: 'administrator'
 ##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
+##     Added key: 'checkbox.reconnet.info'
+##     Added key: 'checkbox.reconnect.panel.big'
+##     Added key: 'checkbox.reconnect.panel.small
+##     Added key: 'checkbox.reconnect.panel.icon
+##     Added key: 'lookandfeel.select
+##     Added key: 'lookandfeel.change.now
+##     Added key: 'lookandfeel.tooltip.restart.no
+##     Added key: 'lookandfeel.tooltip.restart.yes
 ##
+##     Polish translation corrected after 21 march 2011 by Martini26
+
 
 accept = Akceptuj
 active = Aktywny
@@ -325,6 +335,10 @@ checkbox.disable.prev.chat.history = Wy\u0142\u0105cz histori\u0119 rozmowy w ok
 checkbox.enable.emoticons = W\u0142\u0105cz emotikony
 checkbox.idle.enabled = W\u0142\u0105cz opcj\u0119 Zaraz wracam
 checkbox.launch.on.startup = Uruchom przy starcie systemu
+checkbox.reconnet.info = Okre\u015blenie wy\u015bwietlania ponownego po\u0142\u0105czenia
+checkbox.reconnect.panel.big = Wy\u015bwietl jako panel
+checkbox.reconnect.panel.small = Wy\u015bwietl w grupie kontakt\u00f3w
+checkbox.reconnect.panel.icon = Wy\u015bwietl jako ikona
 checkbox.notify.user.comes.online = Powiadom o zmianach statusu u\u017cytkownik\u00f3w na aktywny
 checkbox.notify.user.goes.offline = Powiadom o zmianach statusu u\u017cytkownik\u00f3w na nieaktywny
 checkbox.notify.typing.systemtray = Pokazuj na pasku systemowym kiedy u\u017cytkownik pisze 
@@ -980,4 +994,8 @@ tooltip.view.readme = Zobacz plik readme
 tree.conference.services = Us\u0142ugi konferencyjne
 tree.users.in.room = U\u017cytkownicy w pokoju
 
+lookandfeel.select = Wybierz systemowy wygl\u0105d
+lookandfeel.change.now = Zmie\u0144 teraz
+lookandfeel.tooltip.restart.no = Nie jest wymagany restart
+lookandfeel.tooltip.restart.yes = Aby w\u0142\u0105czy\u0107 systemowy wygl\u0105d naci\u015bnij Zapisz i zresetuj Sparka.
 #!#
