SPARK-1183  Updated to "newest" jmyspell
new localestring:
button.check.spelling = Check spelling

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12156 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n.properties
@@ -3,3 +3,4 @@ title.spellchecker = Spellchecker
 preference.spellcheckingEnabled = Enable &Spellchecking
 preference.autoSpellcheckingEnabled = Enable &Auto Spellchecking
 preference.language = &Language
+button.check.spelling = Check spelling
