--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_de.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_de.properties
@@ -3,3 +3,4 @@ title.spellchecker = Rechtschreibprüfung
 preference.spellcheckingEnabled = &Rechtschreibprüfung aktivieren
 preference.autoSpellcheckingEnabled = &Automatische Rechtschreibprüfung aktivieren
 preference.language = &Sprache
+button.check.spelling = Rechtschreibung überprüfen
