--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_pl.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_pl.properties
@@ -3,3 +3,4 @@ title.spellchecker = Sprawdzanie pisowni
 preference.spellcheckingEnabled = W\u0142\u0105cz sprawdzanie pisowni
 preference.autoSpellcheckingEnabled = W\u0142\u0105cz automatyczne sprawdzanie pisowni
 preference.language = J\u0119zyk - s\u0142ownik
+button.check.spelling = Sprawd\u017a pisowni\u0119
