somewhat related to SPARK-1259
redesigned Codecs-Prefence-Panel

replaced "< ^ > v" with real arrows in english locale (\u21E6 \u21E7 \u21E8 \u21E9)

completed german localisation for phoneplugin

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12165 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_de.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/spark_i18n_de.properties
@@ -27,89 +27,89 @@
 ##
 
 phone.starting = Starting Phone...
-phone.failed = Failed to start phone
-phone.tryagain = Try again
-phone.call = Call
-phone.voicemail = Voice Mail
-phone.viewcallhistory = View Call History
-phone.placecall = Place phone call.
-phone.hangup = End Call
-phone.tips.hangup = Hang up phone conversation
-phone.home = Home
-phone.work = Work
-phone.cell = Cell
-phone.currentcall = Current Call
-phone.incomingcall = Incoming Call
-phone.noprevious = No previous conversations.
-phone.callended = Call Ended
-phone.transferto = Call transferred to
-phone.connected = Connected
-phone.lastcalled = Last called
-phone.never = Never
-phone.duration = Duration
-phone.accept = Accept
-phone.reject = Reject
-phone.callback = Call Back
-phone.delete = Delete
-phone.enternumber = Enter a number to call.
-phone.invalidnumber = Invalid Number
-phone.outgoingcall = Outgoing call to
-phone.callhistory = Call History
-phone.dialed = Dialed
-phone.dialedcalls = Dialed Calls
-phone.received = Received
-phone.receivedcalls = Received Calls
-phone.missed = Missed
-phone.missedcalls = Missed Calls
-phone.unknown = Unknown
-phone.placecallto = Placed call to
-phone.receivedcallfrom = Received Call from
-phone.missedcallfrom = Missed call from
-phone.incomingcallfrom = Incoming call from
-phone.contactdetails = Contact Details
-phone.noinfo = No Information Available
-phone.viewfullprofile = View Full Profile
-phone.tips.mute = Mute this call
-phone.mute = Mute
-phone.unmute = Unmute
-phone.tips.hold = Place this call on Hold
-phone.hold = Hold
-phone.onhold = On Hold
-phone.time = Time
-phone.tips.transfer = Transfer this call
-phone.transfer = Transfer
-phone.transferring = Transferring
-phone.transfered = Transfered
-phone.callstartedat = Call Started at
-phone.callendedat = Call Ended at
-phone.onphonewith = On phone with
-phone.callendedwith = Call ended with
-phone.previousconversations = Previous Conversations
-phone.closeconfirm = Closing this room will end the call. Continue?
-phone.confirmation = Confirmation
-phone.all = All
-phone.allcalls = All Calls
-phone.tocall = Call
-btn.add  	= Add
-btn.edit 	= Edit
-btn.del  	= Delete
-btn.dial	= Call
+phone.failed = Konnte Phone nicht starten
+phone.tryagain = Nochmal versuchen
+phone.call = Anrufen
+phone.voicemail = Sprachmitteilung
+phone.viewcallhistory = Anrufliste anschauen
+phone.placecall = Anruf tätigen
+phone.hangup = Anruf beenden
+phone.tips.hangup = Auflegen
+phone.home = Privat
+phone.work = Geschäftlich
+phone.cell = Mobil
+phone.currentcall = Aktiver Anruf
+phone.incomingcall = Eingehender Anruf
+phone.noprevious = Keine vorherigen Unterhaltungen
+phone.callended = Anruf beendet
+phone.transferto = Anruf weitergeleitet an
+phone.connected = Verbunden
+phone.lastcalled = Zuletzt angerufen
+phone.never = Noch nie
+phone.duration = Daur
+phone.accept = Annehmen
+phone.reject = Ablehnen
+phone.callback = Zurückrufen
+phone.delete = Löschen
+phone.enternumber = Nummer zum Anrufen angeben
+phone.invalidnumber = Ungültige Nummer
+phone.outgoingcall = Ausgehender Anruf an
+phone.callhistory = Anrufliste
+phone.dialed = Gewählt
+phone.dialedcalls = Gewählte Nummern
+phone.received = Eingegangen
+phone.receivedcalls = Eingegangene Anrufe
+phone.missed = Verpasst
+phone.missedcalls = Verpasste Anrufe
+phone.unknown = Unbekannt
+phone.placecallto = Nummer anrufen
+phone.receivedcallfrom = Anruf erhalten von
+phone.missedcallfrom = Verpasster Anruf von
+phone.incomingcallfrom = Eingehender Anruf von
+phone.contactdetails = Kontakt Details
+phone.noinfo = Keine Informationen verfügbar
+phone.viewfullprofile = Komplettes Profil ansehen
+phone.tips.mute = Diesen Anruf stummschalten
+phone.mute = Stummschalten
+phone.unmute = Lautschalten
+phone.tips.hold = Anruf halten
+phone.hold = Halten
+phone.onhold = Anruf wird gehalten
+phone.time = Zeit
+phone.tips.transfer = Diesen Anruf weiterleiten
+phone.transfer = Weiterleiten
+phone.transferring = Wird weitergeleitet...
+phone.transfered = Weitergeleitet
+phone.callstartedat = Anruf angefangen: 
+phone.callendedat = Anruf beendet:
+phone.onphonewith = Am Telefon mit
+phone.callendedwith = Anruf beendet mit
+phone.previousconversations = Vorherige Konversation
+phone.closeconfirm = Das Schließen dieses Raumes beendet den Anruf. Trotzdem fortfahren?
+phone.confirmation = Bestätigung
+phone.all = Alle
+phone.allcalls = Alle Anrufe
+phone.tocall = Anruf
+btn.add  	= Hinzufügen
+btn.edit 	= Bearbeiten
+btn.del  	= Löschen
+btn.dial	= Wählen
 book.name 	= Name
-book.number = Number
-frame.title	= Phonebook
-book.search = Search
+book.number = Nummer
+frame.title	= Telefonbuch
+book.search = Suche
 btn.ok      = OK
-btn.cancel  = Cancel
-frame.add 	= "Add Entry"
-frame.edit 	= "Edit Entry"
-book.exists		= "The phonebook-entry you wish to add is already existing."
-book.noEntry	= "No Entry Selected!"
-book.fillFields = "Please fill all Fields"
-book.warning	= "Attention"
+btn.cancel  = Abbrechen
+frame.add 	= Eintrag hinzufügen
+frame.edit 	= Eintrag bearbeiten
+book.exists		= Der Telefonbuch Eintrag exisitert bereits.
+book.noEntry	= Kein Eintrag ausgewählt
+book.fillFields = Bitte alle Felder ausfüllen
+book.warning	= Achtung
 title.sip.codecs.title = Codecs
-codecs.select 	= < Select
-codecs.unselect = Unselect >
-codecs.up		= Up ^
-codecs.down		= Down v
-codecs.audio.selected	= Selected Audio Codecs
-codecs.audio.avail		= Available Audio Codecs
+codecs.select	= \u21E6 Auswählen
+codecs.unselect = Abwählen \u21E8
+codecs.up = Rauf \u21E7
+codecs.down	= Runter \u21E9
+codecs.audio.selected	= Ausgewählte Codecs
+codecs.audio.avail		= Verfügbare Codecs
