SPARK-1235, added Functions to CTRL-E and CTRL-T dialogs
use SwingUtilities.isRightMouseButton rather than MouseEvent.Button3 (are there still people without scrollwheel around?)

reformatting SysTrayPlugin.java, to prevent eye-cancer

added leftclick to ReconnectPanelSmall


adding new Locale Strings for CTRL-E and CTRL-T:
label.recent.conversation = Recent Conversations
label.frequent.contacts = Frequent Contacts


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12171 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -394,6 +394,8 @@ label.company = Company
 label.confirm.password = &Confirm password
 label.conflict.error = Unable to login due to account already signed in
 label.contact.to.find = Find contact
+label.recent.conversation = Recent Conversations
+label.frequent.contacts = Frequent Contacts
 label.contactlist.avatarsize = Contact list avatar &size:
 label.contactlist.fontsize = &Contact List font size:
 label.country = Country
