--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -261,7 +261,9 @@ label.transfer.download.directory = &Download Verzeichnis:
 label.find = &Finden
 label.rename.to = Umbenennen zu
 label.contact.to.find = Kontakt finden?
-label.available.users.in.roster =   &Verfügbare Teilnehmer in der Kontaktliste
+label.recent.conversation = Kürzliche Konversationen
+label.frequent.contacts = Meistgenutzte Kontakte
+label.available.users.in.roster = &Verfügbare Teilnehmer in der Kontaktliste
 label.time = Zeit: {0}
 label.add.conference.service = &Service für Konferenzen hinzufügen
 label.add.jid = &JID hinzufügen
