SPARK-1264 now you can show your transports as a tab if you want to. Change preference -> appearance -> show transports in tab
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12172 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -355,6 +355,7 @@ checkbox.use.krbconf = Use krb5.conf or krb5.ini
 checkbox.use.krb.dns = Use DNS
 checkbox.use.specify.below = Specify below
 checkbox.use.pki.authentication = Use PKI authentication
+checkbox.transport.tab.setting = Show available transports in tab (requires restart)
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
