--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -235,6 +235,7 @@ checkbox.use.krbconf = Verwende krb5.conf oder krb5.ini
 checkbox.use.krb.dns = Verwende DNS
 checkbox.use.specify.below = Specify Below
 checkbox.use.pki.authentication = Verwende PKI Authentifizierung
+checkbox.transport.tab.setting = Zeige verfügbare Transports in einem Tab an (benötigt Neustart von Spark)
 label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
 label.change.password.to = &Neues Passwort eingeben
 label.username = &Benutzername
