SPARK-1222 added new Lithuanian labels added missing labels as english stubs into lithuanian locale
added new polish labels

added lithuanian spellchecker labels

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12179 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_lt.properties
+++ b/src/plugins/spelling/src/resources/i18n/spellchecker_i18n_lt.properties
@@ -2,5 +2,6 @@ title.spellchecker = Ra\u0161ybos tikrinimas
 
 preference.spellcheckingEnabled = \u012ejungti ra\u0161ybos tikrinim\u0105
 preference.autoSpellcheckingEnabled = \u012ejungti automatin\u012f ra\u0161ybos tikrinim\u0105
-
+preference.language = &Kalba
+button.check.spelling = Patikrint ra\u0161b\u0105
 
