--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -322,6 +322,7 @@ checkbox.use.krbconf = Naudoti krb5.conf ir krb5.ini failus
 checkbox.use.krb.dns = Naudoti sri\u010di\u0173 vard\u0173 server\u012f (DNS)
 checkbox.use.specify.below = Apib\u016bdinimas \u017eemiau
 checkbox.use.pki.authentication = &PKI autentifikavimo naudojimas
+checkbox.transport.tab.setting = Rodyti prieinamus ry\u0161io kanalus kortel\u0117je (reikalingas perkrovimas)
 
 delete.log.permanently = Visi\u0161kas \u017eurnalo pa\u0161alinimas
 delete.permanently = Galutinai pa\u0161alinti?
@@ -357,6 +358,8 @@ label.company = &Organizacija
 label.confirm.password = Slapta\u017eodis &pakartotinai
 label.conflict.error = Negalima prisijungti, nes jau prisijungta.
 label.contact.to.find = Rasti pokalbio partner\u012f
+label.recent.conversation = Paskutiniai pokalbiai
+label.frequent.contacts = Da\u017eni pokalbi\u0173 partneriai
 label.contactlist.avatarsize = Pseudoportreto dydis:
 label.contactlist.fontsize = Adres\u0173 \u0161rifto dydis:
 label.country = \u0160a&lis
@@ -408,7 +411,7 @@ label.resource = &Resursai
 label.response.timeout = &Reakcijos laikas (sek.)
 label.room = &Kambarys
 label.room.name = &Kambario vardas
-label.room.topic= Kambario pokalbio tema
+label.room.topic = Kambario pokalbio tema
 label.search.service = &Ie\u0161kos paslauga
 label.server = &Serveris
 label.server.address = &Serverio adresas
@@ -451,7 +454,7 @@ menuitem.add.contact = Prid\u0117ti adresat\u0105
 menuitem.add.contact.group = Prid\u0117ti adresat\u0173 grup\u0119
 menuitem.add.groupchat.myname = I\u0161ry\u0161kinti mano vard\u0105, kai apie j\u012f u\u017esimena kiti
 menuitem.add.groupchat.mytext = I\u0161ry\u0161kinti mano tekst\u0105, kai k\u0105 nors ra\u0161au
-menuitem.add.groupchat.popname= Parodyti i\u0161\u0161okant\u012f prane\u0161im\u0105, kai kas nors mane pamini
+menuitem.add.groupchat.popname = Parodyti i\u0161\u0161okant\u012f prane\u0161im\u0105, kai kas nors mane pamini
 menuitem.add.groupchat.showjoinleavemessage = Rodyti informacij\u0105 apie prisijungim\u0105 ir atsijungim\u0105
 menuitem.always.on.top = Visados vir\u0161uje
 menuitem.alert.when.online = Informuoti, kai abonentas taps pasiekiamas
@@ -531,7 +534,6 @@ menuitem.view.room.info = Per\u017ei\u016br\u0117ti informacij\u0105 apie kambar
 menuitem.voice = Balsas
 menuitem.show.offline.users = Rodyti neprisijungusius abonentus
 menuitem.show.contact.statusmessage = Parodyti b\u016bsen\u0105
-menuitem.join.room = \u012eeiti \u012f pasirinkt\u0105j\u012f kambar\u012f
 menuitem.bookmark.room = Pasi\u017eym\u0117ti kambar\u012f
 menuitem.refresh = Atnaujinti
 menuitem.create.room = Sukurti arba aplankyti pokalbi\u0173 kambar\u012f
@@ -804,11 +806,10 @@ title.add.new.group = Naujos grup\u0117s prid\u0117jimas
 title.add.search.service = Paie\u0161kos tarnybos prid\u0117jimas
 title.add.to.roster = \u012etraukti \u012f s\u0105ra\u0161\u0105
 title.address = Adresas
-title.advanced.connection.preferences = Prisijungimo nuostatos i\u0161samiau
 title.alert = Prane\u0161imas
 title.appearance = I\u0161vaizda
 title.appearance.preferences = Adaptavimas
-title.available.transports = Galimi prisijungimo kanalai
+title.available.transports = Galimi ry\u0161io kanalai
 title.broadcast.message = Transliuoti \u017eini\u0105
 title.browse.conference.services = Konferencij\u0173 per\u017ei\u016bra
 title.browse.room.service = Pokalbi\u0173 kambari\u0173 per\u017ei\u016bra - {0}
@@ -909,7 +910,7 @@ title.spark.preferences = \u201eSpark\u201c programos nuostatos
 title.start.chat = Prad\u0117ti pokalb\u012f
 title.status.message = Informacija apie b\u016bsen\u0105
 title.tasks = U\u017eduotys
-title.transports = Ry\u0161i\u0173 kanalai
+title.transports = Ry\u0161io kanalai
 title.tray.information = Informacija sistemin\u0117je eilut\u0117je
 title.upgrading.client = Programos atnaujinimas
 title.version.and.time = Versija ir laikas
@@ -935,6 +936,33 @@ tooltip.view.readme = Skaityti \u201eReadMe\u201c fail\u0105
 tree.conference.services = Konferencijos
 tree.users.in.room = Kambaryje apsilank\u0119
 
+###################################
+#####   MISSING    Translation ####
+###################################
 
-
+administrator = Administrator
+button.re.detect = &Re-detect
+checkbox.reconnet.info = Specify reconnection display:
+checkbox.reconnect.panel.big = Display as Panel
+checkbox.reconnect.panel.small = Display in contact group
+checkbox.reconnect.panel.icon = Display as icon
+label.na = n/a
+label.cell = Cell
+label.work = Work
+label.home = Home
+label.add.to.roster = Add user to your roster
+label.audio.device = &Audio device
+label.video.device = &Video device
+menuitem.add.groupchat.showrolesinsteadofstatus = Show chat role icons instead of presence icons
+menuitem.block.contact = Block contact
+menuitem.unblock.contact = Unblock contact
+message.nickname.not.acceptable = Nickname change is not enabled!
+message.search.for.history = Search conversation history
+title.password.required = Password required
+title.aim.registration = AIM account credentials
+title.subscription.request = Subscription request
+lookandfeel.select = Select Look & Feel
+lookandfeel.change.now = Change now
+lookandfeel.tooltip.restart.no = No restart is needed
+lookandfeel.tooltip.restart.yes = To toggle a System Look&Feel press Save and restart Spark.
 #!#
