--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -227,8 +227,10 @@
 ##     Added key: 'lookandfeel.change.now
 ##     Added key: 'lookandfeel.tooltip.restart.no
 ##     Added key: 'lookandfeel.tooltip.restart.yes
+##     Added key: 'label.recent.conversation'
+##     Added key: 'label.frequent.contacts'
 ##
-##     Polish translation corrected after 21 march 2011 by Martini26
+##     Polish translation by Martini26
 
 
 accept = Akceptuj
@@ -406,6 +408,8 @@ label.company = Firma
 label.confirm.password = Potwierd\u017a has\u0142o
 label.conflict.error = Nie mo\u017cna zalogowa\u0107, kto\u015b jest ju\u017c zalogowany na to konto
 label.contact.to.find = Znajd\u017a kontakt
+label.recent.conversation = Ostatnie rozmowy
+label.frequent.contacts = Cz\u0119ste kontakty
 label.contactlist.avatarsize = Rozmiar awatar\u00f3w na li\u015bcie kontakt\u00f3w:
 label.contactlist.fontsize = Rozmiar czcionki listy kontakt\u00f3w:
 label.country = Kraj
