SPARK-1264 transport tab uses the resource  title.transports as title  from i18n files
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12181 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -585,7 +585,7 @@ title.downloads = Downloads
 title.file.exists = Datei existiert
 title.disable.transport = Transport deaktivieren
 title.available.transports = Verfügbare Transport Protokolle
-title.transports = Transport Protokolle
+title.transports = Transports
 title.aim.registration = AIM Registrierung
 title.msn.registration = MSN Registrierung
 title.yahoo.registration = Yahoo Registrierung
